--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
                             <span style="font-family:Helvetica">
                                 <b>
                                     Research Scientist
-                                    <br>JD.com Silicon Valley Research Center
+                                    <br>Silicon Valley Research Center, JD.com American 
                                     <br>
                                 </b>
                             </span>
                         </p>
                         <p>
                             <span style="font-family:Helvetica">
-                                <b>Email:</b> <a href="mailto:yanqinganssg@gmail.com">yanqinganssg@gmail.com</a> | <a href="mailto:yanqingan@whu.edu.cn">yanqingan@whu.edu.cn</a><br>
+                                <b>Email:</b> yanqinganssg <i>at</i> gmail <i>dot</i> com OR yanqingan <i>at</i> whu <i>dot</i> edu <i>dot</i> cn<br>
                                 <b>Office:</b> 675E Middlefield Rd, Mountain View, CA, 94043<br>
                                 <b>Links:</b> <a href="https://github.com/yanqingan">GitHub</a> |
                                 <a href="https://www.linkedin.com/in/yanqingan">LinkedIn</a>
@@ -56,7 +56,7 @@
                     <td>
                     <p style="font-family:Helvetica">I am a computer vision scientist at JD.com Silicon Valley Research Center in Mountain View, CA. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017. In JD, I work on <i>fashion-related</i> applications, mainly involved in <i>virtual human shaping and clothing fitting</i>.</p>
                         <p style="font-family:Helvetica">
-                            My interests primarily focus on the field of 3D computer vision and graphics. In particular, I tackle the challenges in <i>structure from motion, RGB-D fusion, depth estimation, image synthesis and visual correspondence</i>.
+                            My interests primarily focus on the field of 3D computer vision and graphics. In particular, I tackle the challenges in <i>structure from motion, multi-view stereo, RGB-D fusion, depth estimation, image synthesis and visual correspondence</i>.
                             I am also interested in 3D deep learning, such as <i>3D scene perception, guided shape recovery and unstructured data representation</i>.
                         </p>
                     </td>
@@ -71,7 +71,10 @@
                     <td align="left">
                         <ul>
                             <li>
-                                <p style="font-family:Helvetica"><b>[May. 01, 2019]:</b> <i> Two papers are accepted to CGI 2019 and will be published soon in The Visual Computer.</i></p>
+                                <p style="font-family:Helvetica"><b>[Jul. 25, 2019]:</b> <i> Two papers are accepted to PG 2019 and will be published in CGF.</i></p>
+                            </li>
+                            <li>
+                                <p style="font-family:Helvetica"><b>[May. 01, 2019]:</b> <i> Two papers are accepted to CGI 2019 and will be published in The Visual Computer.</i></p>
                             </li>
                             <li>
                                 <p style="font-family:Helvetica"><b>[Oct. 01, 2018]:</b> <i>The <a href="https://github.com/fdp0525/G2LTex" rel="nofollow"><u>project</u></a> for our CVPR 2018 paper is now public. Due to the agreement with other company, some parts can only be released in the form of .so files :(. Please try it and cite our paper if it is useful.</i></p>
