--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
                                 <p style="padding-top:10px">
                                     [<a href="./docs/cgi19_effective.pdf"><u>PDF</u></a>]&nbsp;
                                     [<a href="./docs/cgi19_effective_sub.pdf"><u>Supplemental Material</u></a>]
+                                    [Code (coming soon)]
                                 </p>
                             </li>
                         </ul>
