--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
             <tbody>
                 <tr>
                     <td>
-                    <p style="font-family:Helvetica">I am a computer vision scientist at JD.com Silicon Valley Research Center in Mountain View, CA. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017. In JD, I work on <i>fashion-related</i> applications, mainly involved in <i>virtual human shaping and clothing fitting</i>.</p>
+                    <p style="font-family:Helvetica">I am a research scientist at JD.com Silicon Valley Research Center in Mountain View, CA. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017. In JD, I work on <i>fashion-related</i> applications, mainly involved in <i>virtual human shaping and clothing fitting</i>.</p>
                         <p style="font-family:Helvetica">
-                            My interests primarily focus on the field of 3D computer vision and graphics. In particular, I tackle the challenges in <i>structure from motion, multi-view stereo, RGB-D fusion, depth estimation, image synthesis and visual correspondence</i>.
-                            I am also interested in 3D deep learning, such as <i>3D scene perception, guided shape recovery and unstructured data representation</i>.
+                            My interests primarily focus on the field of Computer Vision and Graphics. In particular, I tackle the challenges in <i>structure from motion, multi-view stereo, RGB-D fusion, depth estimation, image synthesis and visual correspondence</i>.
+                            I am also interested in data-driven 3D object analysis, such as <i>geometric scene perception, model-based shape recovery and unstructured data representation</i>.
                         </p>
                     </td>
                 </tr>
@@ -89,7 +89,7 @@
                                 <p style="font-family:Helvetica"><b>[Apr. 01, 2018]:</b> <i>Our paper on RGBD texture mapping is accepted to CVPR 2018.</i></p>
                             </li>
                             <li>
-                                <p style="font-family:Helvetica"><b>[Nov. 01, 2017]:</b> <i>I joined JD.com Silicon Valley Research Center as a computer vision scientist.</i></p>
+                                <p style="font-family:Helvetica"><b>[Nov. 01, 2017]:</b> <i>I joined JD.com Silicon Valley Research Center as a research scientist.</i></p>
                             </li>
                             <li>
                                 <p style="font-family:Helvetica"><b>[Jun. 30, 2017]:</b> <i>I finished my PhD studying at Wuhan University.</i></p>
