--- a/index.html
+++ b/index.html
@@ -411,6 +411,9 @@
                             <li>
                                 <p style="font-family:Helvetica">ICCV <a href="http://iccv2019.thecvf.com/">2019</a></p>
                             </li>
+                            <li>
+                                <p style="font-family:Helvetica">AAAI <a href="https://aaai.org/Conferences/AAAI-20/">2020</a></p>
+                            </li>
                         </ul>
                         <p style="font-family:Helvetica"><b>Presentations</b></p>
                         <ul>
