--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <p style="font-family:Helvetica">I am a research scientist at JD.com Silicon Valley Research Center in Mountain View, CA. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017. In JD, I work on <i>fashion-related</i> applications, mainly involved in <i>virtual human shaping and clothing fitting</i>.</p>
                         <p style="font-family:Helvetica">
                             My interests primarily focus on the field of Computer Vision and Graphics. In particular, I tackle the challenges in <i>structure from motion, multi-view stereo, RGB-D fusion, depth estimation, image synthesis and visual correspondence</i>.
-                            I am also interested in data-driven 3D object analysis, such as <i>geometric scene perception, model-based shape recovery and unstructured data representation</i>.
+                            I am also interested in data-driven 3D object analysis, such as <i>geometric scene perception, template-based shape recovery and unstructured data representation</i>.
                         </p>
                     </td>
                 </tr>
@@ -382,6 +382,9 @@
                         <p style="font-family:Helvetica"><b>Journal Reviewer</b></p>
                         <ul>
                             <li>
+                                <p style="font-family:Helvetica">IEEE Transactions on Pattern Analysis and Machine Intelligence <a href="https://mc.manuscriptcentral.com/tpami-cs">(TPAMI)</a></p>
+                            </li>
+                            <li>
                                 <p style="font-family:Helvetica">IEEE Transactions on Image Processing <a href="https://mc.manuscriptcentral.com/tip-ieee">(TIP)</a></p>
                             </li>
                             <li>
@@ -392,6 +395,9 @@
                             </li>
                             <li>
                                 <p style="font-family:Helvetica">IEEE Transactions on Cybernetics <a href="https://mc.manuscriptcentral.com/cyb-ieee">(TCYB)</a></p>
+                            </li>
+                            <li>
+                                <p style="font-family:Helvetica">Neurocomputing <a href="https://ees.elsevier.com/neucom/default.asp">(NEUCOM)</a></p>
                             </li>
                             <li>
                                 <p style="font-family:Helvetica">Journal of Applied Remote Sensing <a href="https://jars.msubmit.net/cgi-bin/main.plex?form_type=home">(JARS)</a></p>
@@ -406,13 +412,19 @@
                         <p style="font-family:Helvetica"><b>Conference Reviewer</b></p>
                         <ul>
                             <li>
-                                <p style="font-family:Helvetica">CVPR <a href="http://cvpr2019.thecvf.com/">2019</a></p>
+                                <p style="font-family:Helvetica">CVPR <a href="http://cvpr2019.thecvf.com/">2019</a>, <a href="http://cvpr2020.thecvf.com/">2020</a></p>
                             </li>
                             <li>
                                 <p style="font-family:Helvetica">ICCV <a href="http://iccv2019.thecvf.com/">2019</a></p>
                             </li>
                             <li>
+                                <p style="font-family:Helvetica">ECCV <a href="https://eccv2020.eu/">2020</a></p>
+                            </li>
+                            <li>
                                 <p style="font-family:Helvetica">AAAI <a href="https://aaai.org/Conferences/AAAI-20/">2020</a></p>
+                            </li>
+                            <li>
+                                <p style="font-family:Helvetica">CRV <a href="http://www.computerrobotvision.org/">2020</a></p>
                             </li>
                         </ul>
                         <p style="font-family:Helvetica"><b>Presentations</b></p>
