--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <tbody>
                 <tr>
                     <td>
-                    <p style="font-family:Helvetica">I am a research scientist at JD.com Silicon Valley Research Center in Mountain View, CA. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017. In JD, I work on <i>fashion-related</i> applications, mainly involved in <i>virtual human shaping and clothing fitting</i>.</p>
+                    <p style="font-family:Helvetica">I am a research scientist at JD.com Silicon Valley Research Center in Mountain View, CA. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017. In JD, I work on 3D related applications, mainly involved in <i>virtual clothing fitting and efficient object reconstruction</i>.</p>
                         <p style="font-family:Helvetica">
                             My interests primarily focus on the field of Computer Vision and Graphics. In particular, I tackle the challenges in <i>structure from motion, multi-view stereo, RGB-D fusion, depth estimation, image synthesis and visual correspondence</i>.
                             I am also interested in data-driven 3D object analysis, such as <i>geometric scene perception, template-based shape recovery and unstructured data representation</i>.
