--- a/index.html
+++ b/index.html
@@ -54,9 +54,12 @@
             <tbody>
                 <tr>
                     <td>
-                    <p style="font-family:Helvetica">I am a research scientist at JD.com Silicon Valley Research Center in Mountain View, CA. Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017. In JD, I work on 3D related applications, mainly involved in <i>virtual clothing fitting and efficient object reconstruction</i>.</p>
+                    <p style="font-family:Helvetica">I am a research scientist at JD.com Silicon Valley Research Center in Mountain View, CA. 
+                        Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017. 
+                        In JD, I work on 3D related applications, mainly involved in <i>virtual clothing fitting and efficient object reconstruction</i>.</p>
                         <p style="font-family:Helvetica">
-                            My interests primarily focus on the field of Computer Vision and Graphics. In particular, I tackle the challenges in <i>structure from motion, multi-view stereo, RGB-D fusion, depth estimation, image synthesis and visual correspondence</i>.
+                            My interests primarily focus on the field of Computer Vision and Graphics. 
+                            In particular, I tackle the challenges in <i>structure from motion, multi-view stereo, RGB-D fusion, depth estimation, image synthesis and visual correspondence</i>.
                             I am also interested in data-driven 3D object analysis, such as <i>geometric scene perception, template-based shape recovery and unstructured data representation</i>.
                         </p>
                     </td>
@@ -112,6 +115,66 @@
             <tbody>
                 <tr>
                     <td width="21%<article>">
+                        <img src="./figures/pg19_pyramid.jpg" width="100%<article>">
+                    </td>
+                    <td align="left">
+                        <ul>
+                            <li>
+                                <h3 style="font-family:Helvetica">
+                                    <b>
+                                        Pyramid Multi‐View Stereo with Local Consistency
+                                    </b>
+                                </h3>
+                                <p style="font-family:Helvetica">
+                                    Jie Liao, Yanping Fu, <b>Qingan Yan</b>, Chunxia Xiao
+                                </p>
+                                <p style="font-family:Helvetica">
+                                    <i>Computer Graphics Forum <b>(CGF)</b>, 2019. (<a href="http://pg19.org/">Proceedings of Pacific Graphics 2019</a>)</i>
+                                </p>
+                                </p>
+                                <p style="padding-top:10px">
+                                    [<a href="./docs/pg19_pyramid.pdf"><u>PDF</u></a>]&nbsp;
+                                    [<a href="https://github.com/Txusheng/PLC_"><u>Code on Github</u></a>]
+                                </p>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <table class="imgtable">
+            <tbody>
+                <tr>
+                    <td width="21%<article>">
+                        <img src="./figures/pg19_wavelet.jpg" width="100%<article>">
+                    </td>
+                    <td align="left">
+                        <ul>
+                            <li>
+                                <h3 style="font-family:Helvetica"><b>Wavelet Flow: Optical Flow Guided Wavelet Facial Image
+Fusion</b></h3>
+                                <p style="font-family:Helvetica">
+                                    Hong Ding, <b>Qingan Yan</b>, Gang Fu, Chunxia Xiao
+                                </p>
+                                <p style="font-family:Helvetica">
+                                    <i>Computer Graphics Forum <b>(CGF)</b>, 2019. (<a href="http://pg19.org/">Proceedings of Pacific Graphics 2019</a>)</i>
+                                </p>
+                                </p>
+                                <p style="padding-top:10px">
+                                    [<a href="./docs/pg19_wavelet.pdf"><u>PDF</u></a>]
+                                </p>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+
+        <table class="imgtable">
+            <tbody>
+                <tr>
+                    <td width="21%<article>">
                         <img src="./figures/cgi19_joint.jpg" width="100%<article>">
                     </td>
                     <td align="left">
@@ -156,7 +219,6 @@
                                 <p style="padding-top:10px">
                                     [<a href="./docs/cgi19_effective.pdf"><u>PDF</u></a>]&nbsp;
                                     [<a href="./docs/cgi19_effective_sub.pdf"><u>Supplemental Material</u></a>]
-                                    [Code (coming soon)]
                                 </p>
                             </li>
                         </ul>
@@ -422,6 +484,9 @@
                             </li>
                             <li>
                                 <p style="font-family:Helvetica">AAAI <a href="https://aaai.org/Conferences/AAAI-20/">2020</a></p>
+                            </li>
+                            <li>
+                                <p style="font-family:Helvetica">EG <a href="https://conferences.eg.org/egev20/">2020</a></p>
                             </li>
                             <li>
                                 <p style="font-family:Helvetica">CRV <a href="http://www.computerrobotvision.org/">2020</a></p>
