--- a/index.html
+++ b/index.html
@@ -80,16 +80,7 @@
                                 <p style="font-family:Helvetica"><b>[May. 01, 2019]:</b> <i> Two papers are accepted to CGI 2019 and will be published in The Visual Computer.</i></p>
                             </li>
                             <li>
-                                <p style="font-family:Helvetica"><b>[Oct. 01, 2018]:</b> <i>The <a href="https://github.com/fdp0525/G2LTex" rel="nofollow"><u>project</u></a> for our CVPR 2018 paper is now public. Due to the agreement with other company, some parts can only be released in the form of .so files :(. Please try it and cite our paper if it is useful.</i></p>
-                            </li>
-                            <li>
-                                <p style="font-family:Helvetica"><b>[Sep. 10, 2018]:</b> <i>I uploaded the <a href="https://github.com/fdp0525/G2LTex" rel="nofollow"><u>code</u></a> for our TIP 2017 work. Please try it and cite our paper if it is useful.</i></p>
-                            </li>
-                            <li>
-                                <p style="font-family:Helvetica"><b>[Aug. 07, 2018]:</b> <i>Out of box :), our <a href="https://github.com/yanqingan/SfM_Disambiguation" rel="nofollow"><u>code</u></a> for CVPR 2017 paper is finally released. I modified it in order to be contribution-independent and easily-accessible. Please try it and cite our paper if it is useful.</i></p>
-                            </li>
-                            <li>
-                                <p style="font-family:Helvetica"><b>[Apr. 01, 2018]:</b> <i>Our paper on RGBD texture mapping is accepted to CVPR 2018.</i></p>
+                                <p style="font-family:Helvetica"><b>[Apr. 01, 2018]:</b> <i>Our paper on RGBD texture mapping is accepted to CVPR 2018. P.S. The <a href="https://github.com/fdp0525/G2LTex" rel="nofollow"><u>code</u></a> for our CVPR 2018 paper is now public. Due to the agreement with other company, some parts can only be released in the form of .so files.</i></p>
                             </li>
                             <li>
                                 <p style="font-family:Helvetica"><b>[Nov. 01, 2017]:</b> <i>I joined JD.com Silicon Valley Research Center as a research scientist.</i></p>
@@ -219,6 +210,7 @@ Fusion</b></h3>
                                 <p style="padding-top:10px">
                                     [<a href="./docs/cgi19_effective.pdf"><u>PDF</u></a>]&nbsp;
                                     [<a href="./docs/cgi19_effective_sub.pdf"><u>Supplemental Material</u></a>]
+                                    [<a href="https://github.com/yanqingan/multiscale-deshadow"><u>Code on Github</u></a>]
                                 </p>
                             </li>
                         </ul>
@@ -527,7 +519,7 @@ Fusion</b></h3>
 
         <div id="footer">
             <div id="footer-text">
-                <p style="font-family:Helvetica">Last updated on Jun-01-2019 by Qingan Yan.</p>
+                <p style="font-family:Helvetica">Last updated on Jan-28-2020 by Qingan Yan.</p>
             </div>
         </div>
     </div>
