--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ Fusion</b></h3>
                                 </p>
                                 <p style="padding-top:10px">
                                     [<a href="./docs/cgi19_joint.pdf"><u>PDF</u></a>]&nbsp;
-                                    [<a href="./docs/cgi19_joint_sub.pdf"><u>Supplemental Material</u></a>]
+                                    [<a href="./docs/cgi19_joint_sup.pdf"><u>Supplemental Material</u></a>]
                                 </p>
                             </li>
                         </ul>
@@ -209,7 +209,7 @@ Fusion</b></h3>
                                 </p>
                                 <p style="padding-top:10px">
                                     [<a href="./docs/cgi19_effective.pdf"><u>PDF</u></a>]&nbsp;
-                                    [<a href="./docs/cgi19_effective_sub.pdf"><u>Supplemental Material</u></a>]
+                                    [<a href="./docs/cgi19_effective_sup.pdf"><u>Supplemental Material</u></a>]
                                     [<a href="https://github.com/yanqingan/multiscale-deshadow"><u>Code on Github</u></a>]
                                 </p>
                             </li>
