--- a/index.html
+++ b/index.html
@@ -54,11 +54,13 @@
             <tbody>
                 <tr>
                     <td>
-                    <p style="font-family:Helvetica">I am a research scientist at JD.com Silicon Valley Research Center in Mountain View, CA. 
-                        Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017. 
-                        In JD, I work on 3D related applications, mainly involved in <i>virtual clothing fitting and efficient object reconstruction</i>.</p>
                         <p style="font-family:Helvetica">
-                            My interests primarily focus on the field of Computer Vision and Graphics. 
+                            I am a research scientist at JD.com Silicon Valley Research Center in Mountain View, CA.
+                            Before that, I received my Ph.D. degree in Computer Science from <a href="http://en.whu.edu.cn/">Wuhan University</a>, 2017.
+                            In JD, I work on 3D related applications, mainly involved in <i>virtual clothing fitting and efficient object reconstruction</i>.
+                        </p>
+                        <p style="font-family:Helvetica">
+                            My interests primarily focus on the field of Computer Vision and Graphics.
                             In particular, I tackle the challenges in <i>structure from motion, multi-view stereo, RGB-D fusion, depth estimation, image synthesis and visual correspondence</i>.
                             I am also interested in data-driven 3D object analysis, such as <i>geometric scene perception, template-based shape recovery and unstructured data representation</i>.
                         </p>
@@ -74,25 +76,31 @@
                     <td align="left">
                         <ul>
                             <li>
-                                <p style="font-family:Helvetica"><b>[Jul. 25, 2019]:</b> <i> Two papers are accepted to PG 2019 and will be published in CGF.</i></p>
+                                <p style="font-family:Helvetica"><b>[Feb 24, 2019]:</b> <i> One paper is accepted to CVPR 2020.</i></p>
                             </li>
                             <li>
-                                <p style="font-family:Helvetica"><b>[May. 01, 2019]:</b> <i> Two papers are accepted to CGI 2019 and will be published in The Visual Computer.</i></p>
+                                <p style="font-family:Helvetica"><b>[Feb 04, 2019]:</b> <i> One paper is accepted to GMP 2020 and will be published in CAGD.</i></p>
                             </li>
                             <li>
-                                <p style="font-family:Helvetica"><b>[Apr. 01, 2018]:</b> <i>Our paper on RGBD texture mapping is accepted to CVPR 2018. P.S. The <a href="https://github.com/fdp0525/G2LTex" rel="nofollow"><u>code</u></a> for our CVPR 2018 paper is now public. Due to the agreement with other company, some parts can only be released in the form of .so files.</i></p>
+                                <p style="font-family:Helvetica"><b>[Jul 25, 2019]:</b> <i> Two papers are accepted to PG 2019 and will be published in CGF.</i></p>
                             </li>
                             <li>
-                                <p style="font-family:Helvetica"><b>[Nov. 01, 2017]:</b> <i>I joined JD.com Silicon Valley Research Center as a research scientist.</i></p>
+                                <p style="font-family:Helvetica"><b>[May 01, 2019]:</b> <i> Two papers are accepted to CGI 2019 and will be published in The Visual Computer.</i></p>
                             </li>
                             <li>
-                                <p style="font-family:Helvetica"><b>[Jun. 30, 2017]:</b> <i>I finished my PhD studying at Wuhan University.</i></p>
+                                <p style="font-family:Helvetica"><b>[Apr 01, 2018]:</b> <i>Our paper on RGBD texture mapping is accepted to CVPR 2018. P.S. The <a href="https://github.com/fdp0525/G2LTex" rel="nofollow"><u>code</u></a> for our CVPR 2018 paper is now public. Due to the agreement with other company, some parts can only be released in the form of .so files.</i></p>
                             </li>
                             <li>
-                                <p style="font-family:Helvetica"><b>[May. 30, 2017]:</b> <i>The paper on illumination editing is accepted to IEEE Transactions on Image Processing.</i></p>
+                                <p style="font-family:Helvetica"><b>[Nov 01, 2017]:</b> <i>I joined JD.com Silicon Valley Research Center as a research scientist.</i></p>
                             </li>
                             <li>
-                                <p style="font-family:Helvetica"><b>[Apr. 15, 2017]:</b> <i>Our work on structure-from-motion disambiguation is accepted to CVPR 2017.</i></p>
+                                <p style="font-family:Helvetica"><b>[Jun 30, 2017]:</b> <i>I finished my PhD studying at Wuhan University.</i></p>
+                            </li>
+                            <li>
+                                <p style="font-family:Helvetica"><b>[May 30, 2017]:</b> <i>The paper on illumination editing is accepted to IEEE Transactions on Image Processing.</i></p>
+                            </li>
+                            <li>
+                                <p style="font-family:Helvetica"><b>[Apr 15, 2017]:</b> <i>Our work on structure-from-motion disambiguation is accepted to CVPR 2017.</i></p>
                             </li>
                         </ul>
                     </td>
@@ -125,7 +133,7 @@
                                 </p>
                                 <p style="padding-top:10px">
                                     [<a href="./docs/pg19_pyramid.pdf"><u>PDF</u></a>]&nbsp;
-                                    [<a href="https://github.com/Txusheng/PLC_"><u>Code on Github</u></a>]
+                                    [<a href="https://github.com/Txusheng/PLC_"><u>Code</u></a>]
                                 </p>
                             </li>
                         </ul>
@@ -210,7 +218,7 @@ Fusion</b></h3>
                                 <p style="padding-top:10px">
                                     [<a href="./docs/cgi19_effective.pdf"><u>PDF</u></a>]&nbsp;
                                     [<a href="./docs/cgi19_effective_sup.pdf"><u>Supplemental Material</u></a>]
-                                    [<a href="https://github.com/yanqingan/multiscale-deshadow"><u>Code on Github</u></a>]
+                                    [<a href="https://github.com/yanqingan/multiscale-deshadow"><u>Code</u></a>]
                                 </p>
                             </li>
                         </ul>
@@ -237,7 +245,7 @@ Fusion</b></h3>
                                 </p>
                                 <p style="padding-top:10px">
                                     [<a href="./docs/cvpr18_texture.pdf"><u>PDF</u></a>]&nbsp;
-                                    [<a href="https://github.com/fdp0525/G2LTex"><u>Code on Github</u></a>]
+                                    [<a href="https://github.com/fdp0525/G2LTex"><u>Code</u></a>]
                                 </p>
                             </li>
                         </ul>
@@ -282,7 +290,7 @@ Fusion</b></h3>
                                 <p style="font-family:Helvetica"><i>IEEE Transactions on Image Processing <b>(TIP)</b>, 2017.</i></p>
                                 <p style="padding-top:10px">
                                     [<a href="./docs/tip17_illumination.pdf"><u>PDF</u></a>]&nbsp;
-                                    [<a href="https://github.com/yanqingan/Illumination_Decomposition"><u>Code on Github</u></a>]
+                                    [<a href="https://github.com/yanqingan/Illumination_Decomposition"><u>Code</u></a>]
                                 </p>
                             </li>
                         </ul>
@@ -305,7 +313,7 @@ Fusion</b></h3>
                                 <p style="font-family:Helvetica"><i>IEEE Conference on Computer Vision and Pattern Recognition <b>(CVPR)</b>, 2017. <b>(<a href="https://www.youtube.com/watch?v=eEfi6GsBBP8">Spotlight Oral</a>)</b></i></p>
                                 <p style="padding-top:10px">
                                     [<a href="./docs/cvpr17_distinguishing.pdf"><u>PDF</u></a>]&nbsp;
-                                    [<a href="https://github.com/yanqingan/SfM_Disambiguation"><u>Code on Github</u></a>]
+                                    [<a href="https://github.com/yanqingan/SfM_Disambiguation"><u>Code</u></a>]
                                 </p>
                             </li>
                         </ul>
@@ -519,7 +527,7 @@ Fusion</b></h3>
 
         <div id="footer">
             <div id="footer-text">
-                <p style="font-family:Helvetica">Last updated on Jan-28-2020 by Qingan Yan.</p>
+                <p style="font-family:Helvetica">Last updated on Feb 26, 2020 by Qingan Yan.</p>
             </div>
         </div>
     </div>
